Return page and brand landing page alignment issue - Fixed

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_brand-slider.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/components/_brand-slider.scss
@@ -44,6 +44,10 @@
 	}
     &:not(:empty){
         margin: 0 auto 70px;
+        
+        @include media-breakpoint-down(sm) {
+            margin: 0 auto 20px;
+        }
     }
     @include media-breakpoint-down(sm) {
     	.slick-track{
