--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_return.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_return.scss
@@ -159,7 +159,23 @@
     margin: 30px;
     padding: 25px;
 }
-
+.accordtionTataCliq .accContents span {
+    clear: both;
+}
+.accordtionTataCliq .accContents .fa-angle-right:before {
+    font-family: FontAwesome;
+    font-weight: lighter;
+    color: #B9966B;
+    content: "\f105";
+    font-size: 70px;
+    line-height: 18px;
+    margin-right: 5px;
+    top: 2px;
+    position: relative;
+}
+.accordtionTataCliq .fa-angle-right:before {
+    content: "\f105";
+}
 .accordtionTataCliq .selectScheduledPickup .select-content ul{
  margin: 0px;
     padding: 0px;
@@ -201,3 +217,75 @@
 }
 .modal-dialog.changeAdddd .defaultAddCheck{margin-top: 10px;}
 .modal-dialog.changeAdddd .modal-body{overflow-x: hidden;}
+.page-returnSuccess{
+    .account{
+        .page-header{             
+            border-bottom: 1px solid #eee;
+            text-align: center;
+            width: 100%;
+            background-color: #fafafa;
+            padding: 50px 0;
+            margin: 0;
+            span {
+                display: inline-block;
+                font-size: 16px;
+                max-width: 650px;
+                line-height: 30px;
+            }
+        }
+    }
+    .return-form.success .return-container {
+        border: 2px solid #ccc;
+        padding: 10px;
+    }
+    .return-form .return-container .products .item .product-info {
+        position: relative;
+        padding: 0;
+    }
+    .return-form.success .order-details {
+            font-size: 24px;
+            margin: 0px;
+     }
+    .return-form .return-container .products .item .product-info .product-img {
+        float: left;
+        width: 35%;
+        max-width: 120px;
+        margin-right: 5%;
+    }
+    .return-form .return-container .products .item .product-info .product {
+        float: left;
+        width: 55%;
+        margin-right: 5%;
+    }
+    .return-form .return-container .products .item .product-info .item-details {
+        display: none;
+    }
+    .page-returnSuccess .return-form.success .return-container .products{
+        .item{
+           list-style:none;
+        }
+        .product-info{
+            li{
+               list-style:none; 
+            }            
+        }
+    }
+    @media (min-width: 791px){
+        .return-form.success .return-container .products {
+            width: 35%;
+            margin-right: 5%;
+        }
+        .return-form .order-details {
+            display: none;
+        }
+        .return-form.success .return-container .reason, .return-form.success .return-container .method {
+            width: 60%;
+            float: left;
+        }
+        .return-form .return-container::after {
+            clear: both;
+            content: "";
+            display: table;
+        }
+    }
+}
